# Co-Engine

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: main.yml
resources/: PSM_Sheet.plist
src/: main.cpp
src/core/: LevelOptimizer.cpp  LevelOptimizer.hpp  ObjectPoolManager.cpp  ObjectPoolManager.hpp  ProceduralGenerator.cpp  ProceduralGenerator.hpp  SmartGridSerializer.cpp  SmartGridSerializer.hpp  TaskScheduler.cpp  TaskScheduler.hpp  UndoManager.cpp  UndoManager.hpp
src/hooks/: EditorHookUI.cpp  EditorUIHook.hpp  LevelEditorLayerHook.cpp  LevelEditorLayerHook.hpp
src/ui/: BossFightEditor.cpp  BossFightEditor.hpp  MainDashboardLayer.cpp  MainDashboardLayer.hpp  TimelineTrackEditor.cpp  TimelineTrackEditor.hpp
